sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:14: error: '(' expected but identifier found.
  if getNombreValeurs > 100
     ^